lib_LTLIBRARIES = libccspwrapper.la
libccspwrapper_la_SOURCES = \
	tr181_tree_tracker.cxx \
	ff_callback.cxx \
	tr181_interface.cxx \
	cdm_client_impl.cxx \
	ccd_interface.cxx \
	ccsp_config.cxx \
	message_bus.cxx \
	tr181_sub_collection_provider.cxx \
	ccsp_abstractor.cxx \
	ccsp_attacher.cxx \
	tr181_config_provider.cxx \
	ccsp_callbacks.cxx \
	tr181_scalar.cxx \
	cdm_client.cxxAM_CPPFLAGS = -I$(top_srcdir)
AM_CPPFLAGS = -I$(top_srcdir)
