lib_LTLIBRARIES = libdcwcore.la
libdcwcore_la_SOURCES = \
	filetrafficfilterprofile.cxx \
	macaddress.cxx \
	trafficfilterprofile.cxx \
	message.cxx \
	cfiletrafficfilterprofile.cxx \
	controller.cxx \
	simplenetwork.cxx \
	stringtrafficfilterprofile.cxxAM_CPPFLAGS = -I$(top_srcdir)
AM_CPPFLAGS = -I$(top_srcdir)
