lib_LTLIBRARIES = libdcwcore.la

libdcwcore_la_SOURCES =            \
  cfiletrafficfilterprofile.cxx    \
  controller.cxx                   \
  filetrafficfilterprofile.cxx     \
  macaddress.cxx                   \
  message.cxx                      \
  simplenetwork.cxx                \
  stringtrafficfilterprofile.cxx   \
  trafficfilterprofile.cxx         \

AM_CPPFLAGS = -I$(top_srcdir)
