lib_LTLIBRARIES = libdcwlinux.la

libdcwlinux_la_SOURCES =                \
  ap_configuration.cxx                  \
  brctlnetwork.cxx                      \
  json_configuration_provider.cxx       \
  macremapper_driver.cxx                \
  vap_manager.cxx                       \
  virtual_ap.cxx

AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/dcwlinux/include
