lib_LTLIBRARIES = libdcwlinux.la

libdcwlinux_la_SOURCES =                \
  ap_configuration.cxx                  \
  brctlnetwork.cxx                      \
  json_configuration_provider.cxx       \
  macremapper_driver.cxx                \
  mrmctl.cxx                            \
  vap_manager.cxx                       \
  virtual_ap.cxx

AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/dcwlinux/include   \
  -I$(top_srcdir)/dcwlinux/include/macremapper/user_include      \
  -I$(top_srcdir)/dcwlinux/mrmctl                                
